# orange

./: .gitignore  README.md  agent.py  bot.py  caption.py  generic_agent.py  generic_agent_inputs.py  local_env.yml  meme_grabber.py  meme_grabber_tests.py  ollama.py  ollama_generic_agent.py  pyproject.toml  requirements.txt  todos.md  weather_agent_config.py
